k8s/apps/mirakurun/lily/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
        - name: app
          image: chinachu/mirakurun:4.0.0-beta.16@sha256:64e7ee56574b46f9361e8eab59cf74df3665fbc29352bce03eca321dbc978c9b
          ports:
            - name: http
              containerPort: 40772
          volumeMounts:
            - name: data
              mountPath: /var/db/mirakurun
            - name: config
              mountPath: /etc/mirakurun
              readOnly: true
            - name: dev-px4video0
              mountPath: /dev/px4video0
            - name: dev-px4video1
              mountPath: /dev/px4video1
            - name: dev-px4video2
              mountPath: /dev/px4video2
            - name: dev-px4video3
              mountPath: /dev/px4video3
            - name: dev-px4video4
              mountPath: /dev/px4video4
            - name: dev-px4video5
              mountPath: /dev/px4video5
            - name: dev-px4video6
              mountPath: /dev/px4video6
            - name: dev-px4video7
              mountPath: /dev/px4video7
            - name: dev-pxmlt8video0
              mountPath: /dev/pxmlt8video0
            - name: dev-pxmlt8video1
              mountPath: /dev/pxmlt8video1
            - name: dev-pxmlt8video2
              mountPath: /dev/pxmlt8video2
            - name: dev-pxmlt8video3
              mountPath: /dev/pxmlt8video3
            - name: dev-pxmlt8video4
              mountPath: /dev/pxmlt8video4
            - name: dev-pxmlt8video5
              mountPath: /dev/pxmlt8video5
            - name: dev-pxmlt8video6
              mountPath: /dev/pxmlt8video6
            - name: dev-pxmlt8video7
              mountPath: /dev/pxmlt8video7
          securityContext:
            capabilities:
              add:
                - SYS_ADMIN
                - SYS_NICE
            privileged: true
      volumes:
        - name: data
          hostPath:
            path: /mnt/local/mirakurun/data
            type: DirectoryOrCreate
        - name: config
          hostPath:
            path: /mnt/local/mirakurun/config
            type: Directory
        - name: dev-px4video0
          hostPath:
            path: /dev/px4video0
            type: CharDevice
        - name: dev-px4video1
          hostPath:
            path: /dev/px4video1
            type: CharDevice
        - name: dev-px4video2
          hostPath:
            path: /dev/px4video2
            type: CharDevice
        - name: dev-px4video3
          hostPath:
            path: /dev/px4video3
            type: CharDevice
        - name: dev-px4video4
          hostPath:
            path: /dev/px4video4
            type: CharDevice
        - name: dev-px4video5
          hostPath:
            path: /dev/px4video5
            type: CharDevice
        - name: dev-px4video6
          hostPath:
            path: /dev/px4video6
            type: CharDevice
        - name: dev-px4video7
          hostPath:
            path: /dev/px4video7
            type: CharDevice
        - name: dev-pxmlt8video0
          hostPath:
            path: /dev/pxmlt8video0
            type: CharDevice
        - name: dev-pxmlt8video1
          hostPath:
            path: /dev/pxmlt8video1
            type: CharDevice
        - name: dev-pxmlt8video2
          hostPath:
            path: /dev/pxmlt8video2
            type: CharDevice
        - name: dev-pxmlt8video3
          hostPath:
            path: /dev/pxmlt8video3
            type: CharDevice
        - name: dev-pxmlt8video4
          hostPath:
            path: /dev/pxmlt8video4
            type: CharDevice
        - name: dev-pxmlt8video5
          hostPath:
            path: /dev/pxmlt8video5
            type: CharDevice
        - name: dev-pxmlt8video6
          hostPath:
            path: /dev/pxmlt8video6
            type: CharDevice
        - name: dev-pxmlt8video7
          hostPath:
            path: /dev/pxmlt8video7
            type: CharDevice
      restartPolicy: Always
      securityContext:
        seccompProfile:
          type: RuntimeDefault
