k8s/apps/mirakurun/lily/resources/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: route

spec:
  routes:
    - kind: Rule
      match: Host(`mirakurun.starry.blue`)
      services:
        - name: app
          port: 40772

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: route-gateway

spec:
  routes:
    - kind: Rule
      match: (Host(`mirakurun-api.starry.blue`) || Host(`mirakurun-api-v6.starry.blue`)) && PathPrefix(`/api`)
      services:
        - name: app
          port: 40772
      middlewares:
        - name: mirakurun-basic-auth
  tls:
    options:
      name: gateway

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: mirakurun-basic-auth

spec:
  basicAuth:
    realm: Access Restricted
    removeHeader: true
    secret: basic-auth-credentials
